create: hero block+media queries

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Издательство Universal</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap" rel="stylesheet">  
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -41,5 +43,106 @@
         <!-- /.container -->
     </header>
     <!-- /.header -->
+    <section class="hero">
+        <div class="container hero__container">
+            <div class="hero__left-block">
+                <img src="img/hero-image.jpg" alt="Image: main logo" class="hero__image">
+                <div class="hero__left-block-avatar avatar-block">
+                    <a href="#" class="avatar-block__link">
+                        <img src="img/avatar.png" alt="Icon: avatar" class="avatar-block__img">
+                        <span class="avatar-block__text-one">Давид Гуров</span>
+                        <span class="avatar-block__text-two">Разработчик</span>
+                    </a>
+                </div>
+                <div class="hero__left-block-text text-block">
+                    <span class="text-block__first">
+                        Javascript
+                    </span>
+                    <span class="text-block__second">
+                        Расширение Chrome защищает от атак
+                    </span>
+                    <button class="text-block__third">Читать далее <img src="img/arrow.svg" alt="Icon: arrow" class="text-block__img"></button>
+                </div>
+                <!-- /.hero__left-block-text -->
+            </div>
+            <!-- /.hero__left-block -->
+            <div class="hero__right-block right-block">
+                <div class="right-block__header">
+                    <span class="right-block__text">Рекомендуем</span>
+                </div>
+                <!-- /.hero__right-block-header -->
+                
+                <div class="right-block__post">
+                    <a href="#" class="right-block__link">
+                        <div class="right-block__post-wrapper">
+                            <span class="right-block__text-header">css</span>
+                            <span class="right-block__text-descr">Как использовать CSS float после того, как вышел Flexbox</span>
+                        </div>
+                    </a>
+                </div>
+                <!-- /.hero__post-block -->
+                <div class="right-block__post">
+                    <a href="#" class="right-block__link">
+                        <div class="right-block__post-wrapper">
+                            <span class="right-block__text-header">javascript</span>
+                            <span class="right-block__text-descr">На каком стандарте писать скрипты, если я фрилансер</span>
+                        </div>
+                    </a>
+                </div>
+                <!-- /.hero__post-block -->
+                <div class="right-block__post">
+                    <a href="#" class="right-block__link">
+                        <div class="right-block__post-wrapper">
+                            <span class="right-block__text-header">html</span>
+                            <span class="right-block__text-descr">Правильно вставляем картинку на сайт для Retina дисплея</span>
+                        </div>
+                    </a>
+                </div>
+                <!-- /.hero__post-block -->
+                <div class="right-block__post">
+                    <a href="#" class="right-block__link">
+                        <div class="right-block__post-wrapper">
+                            <span class="right-block__text-header">web design</span>
+                            <span class="right-block__text-descr">ТОП-10 плагинов для Figma</span>
+                        </div>
+                    </a>
+                </div>
+                <!-- /.hero__post-block -->
+                <div class="right-block__post">
+                    <a href="#" class="right-block__link">
+                        <div class="right-block__post-wrapper">
+                            <span class="right-block__text-header">css</span>
+                            <span class="right-block__text-descr">Возможности CSS Grid Layout , которые уже можно применять</span>
+                        </div>
+                    </a>
+                </div>
+                <!-- /.hero__post-block -->
+
+                <div class="right-block__post">
+                    <a href="#" class="right-block__link">
+                        <div class="right-block__post-wrapper">
+                            <span class="right-block__text-header">example</span>
+                            <span class="right-block__text-descr">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, maxime.</span>
+                        </div>
+                    </a>
+                </div>
+                <!-- /.hero__post-block -->
+                <div class="right-block__post">
+                    <a href="#" class="right-block__link">
+                        <div class="right-block__post-wrapper">
+                            <span class="right-block__text-header">some-thing</span>
+                            <span class="right-block__text-descr">Возможности CSS Grid Layout , которые уже можно применять</span>
+                        </div>
+                    </a>
+                </div>
+                <!-- /.hero__post-block -->
+            </div>
+            <!-- /.hero__right-block -->
+        </div>
+    </section>
+    <!-- /.hero -->
+
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
