create: others block with articles

--- a/index.html
+++ b/index.html
@@ -165,7 +165,323 @@
         </div>
     </section>
     <!-- /.hero -->
-
+    <section class="themes">
+        <div class="container themes__container">
+            <a href="#" class="themes__link">
+                <div class="themes__post">
+                    <div class="themes__text">
+                        25 способов настроить слайдер 
+                    </div>
+                    <img src="img/themes-one.png" alt="Icon: themes" class="themes__img">
+                </div>
+                <!-- /.themes__post -->
+            </a>
+            <div class="themes__line"></div>
+            <a href="#" class="themes__link">
+                <div class="themes__post">
+                    <div class="themes__text">
+                        Главные фишки фрилансера 
+                    </div>
+                    <img src="img/themes-two.png" alt="Icon: themes" class="themes__img">
+                </div>
+                <!-- /.themes__post -->
+            </a>
+            <div class="themes__line"></div>
+            <a href="#" class="themes__link">
+                <div class="themes__post">
+                    <div class="themes__text">
+                        Техника управлеия  временем “Помодоро”
+                    </div>
+                    <img src="img/themes-three.png" alt="Icon: themes" class="themes__img">
+                </div>
+                <!-- /.themes__post -->
+            </a>
+            <div class="themes__line"></div>
+            <a href="#" class="themes__link">
+                <div class="themes__post">
+                    <div class="themes__text">
+                        Что нужно знать о Git и GitHub  
+                    </div>
+                    <img src="img/themes-four.png" alt="Icon: themes" class="themes__img">
+                </div>
+                <!-- /.themes__post -->
+            </a>
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /.main-themes -->
+    <section class="others">
+        <div class="container others__container">
+            <a href="#" class="others__links grid-one">
+                <div class="others__first">
+                    <div class="others__first-one">
+                        <div class="others__first-block">
+                            <span class="others__first-header">
+                                Статьи 
+                            </span>
+                            <span class="others__first-descr">
+                                Вам предложили работу мечты, но вы не можете... 
+                            </span>
+                            <span class="others__first-descr-another">
+                                Как поступить, если хочется пойти на работу мечты, но она находится в другом городе. У вас семья и переезжать вы не готовы. 
+                            </span>
+                        </div>
+                        <img src="img/car.png" alt="Icon: car" class="others__first-img">
+                    </div>
+                    <!-- /.others__first-one -->
+                    <div class="others__first-devide"></div>
+                    <div class="others__first-comment">
+                        <img src="img/avatar-others.png" alt="Icon: avatar" class="others__first-avatar">
+                        <div class="others__first-decr">
+                            <span class="others__first-decr-first">Инна Квашова: </span>
+                            <span class="others__first-decr-second">Каждый разработчик мечтает переехать тут идет продолжение текста, так что можно написать все, что угодно</span>
+                        </div>
+                        <div class="others__first-comments">
+                            <img src="img/comment.svg" alt="Icon: comment" class="others__first-comments-img">
+                            <div class="others__first-comments-number">342</div>
+                        </div>
+                    </div>
+                </div>
+                <!-- /.others__first -->
+            </a>
+            <a href="#" class="others__links grid-two">
+                <div class="others__second">
+                    <div class="others__second-first second-info">
+                        <button class="second-info__button">
+                            Популярное
+                        </button>
+                        <div class="second-info__text">
+                            <span class="second-info__text-one">Web design</span>
+                            <div class="second-info__text-two">Где взять реальные проекты для портфолио</div>
+                        </div>
+                    </div>
+                    <div class="others__second-second second-comment">
+                        <img src="img/avatar-others.png" alt="Icon: avatar" class="second-comment__img">
+                        <div class="second-comment__text">
+                            <div class="second-comment__name">Сара Женникова</div>
+                            <div class="second-comment__meta">
+                                <div class="second-comment__meta-date">25 сентября</div>
+                                <div class="second-comment__meta-comments">
+                                    <img src="img/comment-second.svg" alt="Icon: comments" class="second-comment__meta-icon">
+                                    16
+                                </div>
+                                <div class="second-comment__meta-likes">
+                                    <img src="img/like-second.svg" alt="Icon: likes" class="second-comment__meta-icon">
+                                    832
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- /.others__second -->
+            </a>
+            <div class="others__third third grid-three">
+                    <div class="third__first">
+                        <img src="img/list.svg" alt="Icon: list" class="third__list">
+                        <div class="third__first-text">
+                            Чек-лист сдачи верстки вашему заказчику
+                        </div>
+                        <div class="third__first-size">
+                            PDF, 125 Мб
+                        </div>
+                    </div>
+                    <div class="third__line">
+                    </div>
+                    <div class="third__second">
+                        <a href="#" class="others__links">
+                            <div class="third__second-block">
+                                <img src="img/download.svg" alt="Icon: download" class="third__second-img">
+                                <span class="third__second-text">Скачать</span>
+                            </div>
+                        </a>
+                    </div>
+                    <!-- /.third__second -->
+            </div>
+            <!-- /.others__third -->
+            <div class="others__forth forth grid-four">
+                <div class="forth__first">
+                    <div class="forth__first-text">Теги</div>
+                </div>
+                <div class="forth__line">
+                </div>
+                <div class="forth__second">
+                    <div class="forth__second-block">
+                        <span class="forth__second-text">
+                            Forest
+                        </span>
+                    </div>
+                    <!-- /.forth__second-block -->
+                    <div class="forth__second-block">
+                        <span class="forth__second-text">
+                            Hover tag
+                        </span>
+                    </div>
+                    <!-- /.forth__second-block -->
+                    <div class="forth__second-block">
+                        <span class="forth__second-text">
+                            Nature
+                        </span>
+                    </div>
+                    <!-- /.forth__second-block -->
+                    <div class="forth__second-block">
+                        <span class="forth__second-text">
+                            Recreation
+                        </span>
+                    </div>
+                    <!-- /.forth__second-block -->
+                    <div class="forth__second-block">
+                        <span class="forth__second-text">
+                            Tent
+                        </span>
+                    </div>
+                    <!-- /.forth__second-block -->
+                    <div class="forth__second-block">
+                        <span class="forth__second-text">
+                            Fresh air
+                        </span>
+                    </div>
+                    <!-- /.forth__second-block -->
+                    <div class="forth__second-block">
+                        <span class="forth__second-text">
+                            Summer
+                        </span>
+                    </div>
+                    <!-- /.forth__second-block -->
+                    <div class="forth__second-block">
+                        <span class="forth__second-text">
+                            Mountains
+                        </span>
+                    </div>
+                    <!-- /.forth__second-block -->
+                    <div class="forth__second-block">
+                        <span class="forth__second-text">
+                            Wood
+                        </span>
+                    </div>
+                    <!-- /.forth__second-block -->
+                    <div class="forth__second-block">
+                        <span class="forth__second-text">
+                            Map
+                        </span>
+                    </div>
+                    <!-- /.forth__second-block -->
+                    <div class="forth__second-block">
+                        <span class="forth__second-text">
+                            Sun
+                        </span>
+                    </div>
+                    <!-- /.forth__second-block -->
+                    <div class="forth__second-block">
+                        <span class="forth__second-text">
+                            Wild animals
+                        </span>
+                    </div>
+                    <!-- /.forth__second-block -->
+                    <div class="forth__second-block">
+                        <span class="forth__second-text">
+                            Night
+                        </span>
+                    </div>
+                    <!-- /.forth__second-block -->
+                </div>
+                <!-- /.forth__second -->
+            </div>
+            <!-- /.others__forth -->
+            <a href="#" class="others__links grid-five">
+                <div class="others__fifth fifth">
+                    <img src="img/others-fifth.png" alt="Icon: article picture" class="fifth__img">
+                    <div class="fifth__text">
+                        20+ инструментов для js-разработчика
+                    </div>
+                </div>
+            </a>
+            <a href="#" class="others__links grid-six">
+                <div class="others__six six">
+                    <div class="six__title">
+                        Удачные референсы
+                    </div>
+                    <!-- /.six__title -->
+                    <div class="six__descr">
+                        Как выбрать подходящие исходники, если вы ищите идею для интерфейса
+                    </div>
+                    <div class="six__date">
+                        15 октября
+                    </div>
+                    <!-- /.six__date -->
+                </div>
+                <!-- /.others__six -->
+            </a>
+            <a href="#" class="others__links grid-seven">
+                <div class="others__six six">
+                    <div class="six__title">
+                        Заказчики — мудаки?
+                    </div>
+                    <!-- /.six__title -->
+                    <div class="six__descr">
+                        Как защититься от бесконечных правок на этапе сдачи проекта
+                    </div>
+                    <div class="six__date">
+                        20 октября
+                    </div>
+                    <!-- /.six__date -->
+                </div>
+                <!-- /.others__six -->
+            </a>
+            <a href="#" class="others__links grid-eight">
+                <div class="others__six six">
+                    <div class="six__title">
+                        Работа без стресса — это тут идет какой-то длинный предлинный заголовок
+                    </div>
+                    <!-- /.six__title -->
+                    <div class="six__descr">
+                        Обустройте свое рабочее место так, чтобы не испытывать раздражение от скрипучего текста, который тут очень супер длинный
+                    </div>
+                    <div class="six__date">
+                        26 октября
+                    </div>
+                    <!-- /.six__date -->
+                </div>
+                <!-- /.others__six -->
+            </a>
+            <a href="#" class="others__links grid-nine">
+                <div class="others__six six">
+                    <div class="six__title" style="width: 185px;">
+                        Бесплатные методы что-то тут еще текст
+                    </div>
+                    <!-- /.six__title -->
+                    <div class="six__descr">
+                        Как не платить за софт, если у вас есть студенческий билет высшего учебного заведения длинный текст
+                    </div>
+                    <div class="six__date">
+                        13 октября
+                    </div>
+                    <!-- /.six__date -->
+                </div>
+                <!-- /.others__six -->
+            </a>
+            <div class="others__seven seven grid-ten">
+                <div class="seven__title">
+                    Наши соцсети
+                </div>
+                <!-- /.seven__title -->
+                <div class="seven__icons">
+                    <a href="https://facebook.com" class="others__links-an" target="_blank">
+                        <img src="img/facebook.svg" alt="Icon: facebook" class="seven__icon">
+                    </a>
+                    <a href="https://twitter.com" class="others__links-an" target="_blank">
+                        <img src="img/twitter.svg" alt="Icon: twitter" class="seven__icon">
+                    </a>
+                    <a href="https://youtube.com" class="others__links-an" target="_blank">
+                        <img src="img/youtube.svg" alt="Icon: youtube" class="seven__icon">
+                    </a>
+                </div>
+                <!-- /.seven__icons -->
+            </div>
+            <!-- /.others__seven -->
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /.others -->
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/main.js"></script>
 </body>
