--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                         <img src="img/avatar-others.png" alt="Icon: avatar" class="others__first-avatar">
                         <div class="others__first-decr">
                             <span class="others__first-decr-first">Инна Квашова: </span>
-                            <span class="others__first-decr-second">Каждый разработчик мечтает переехать тут идет продолжение текста, так что можно написать все, что угодно</span>
+                            <span class="others__first-decr-second">Каждый разработчик мечтает переехать в тут идет продолжение текста, так что можно написать все, что угодно</span>
                         </div>
                         <div class="others__first-comments">
                             <img src="img/comment.svg" alt="Icon: comment" class="others__first-comments-img">
@@ -396,7 +396,7 @@
                 </div>
             </a>
             <a href="#" class="others__links grid-six">
-                <div class="others__six six">
+                <div class="others__six six media-one">
                     <div class="six__title">
                         Удачные референсы
                     </div>
@@ -428,7 +428,7 @@
                 <!-- /.others__six -->
             </a>
             <a href="#" class="others__links grid-eight">
-                <div class="others__six six">
+                <div class="others__six six media-one">
                     <div class="six__title">
                         Работа без стресса — это тут идет какой-то длинный предлинный заголовок
                     </div>
@@ -445,7 +445,7 @@
             </a>
             <a href="#" class="others__links grid-nine">
                 <div class="others__six six">
-                    <div class="six__title" style="width: 185px;">
+                    <div class="six__title six__title-analog">
                         Бесплатные методы что-то тут еще текст
                     </div>
                     <!-- /.six__title -->
