create: money block

--- a/index.html
+++ b/index.html
@@ -482,6 +482,18 @@
         <!-- /.container -->
     </section>
     <!-- /.others -->
+    <section class="money">
+        <div class="container money__container">
+            <div class="money__text">
+                Расследование недели: сколько зарабатывает веб разработчик в Москве
+            </div>
+            <button class="money__button">
+                Читать статью <img src="img/arrow.svg" alt="Icon: arrow" class="money__img">
+            </button> <!-- /.money__button -->
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /.money -->
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/main.js"></script>
 </body>
